[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".env",
           "tests*"] # excluded as package discovery, not as a package, this is why it still appears when building the readnext package

[project]
name = "literate-copilot"
version = "0.0.1"
authors = [
  { name="Frederick Giasson", email="fred@fgiasson.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/fgiasson/literate-copilot"
"Bug Tracker" = "https://github.com/fgiasson/literate-copilot/issues"

[project.scripts]
lpcalculator = "literate_copilot.main:app"